--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,12 @@
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 h1,p{
   font-family: 'Courier New', Courier, monospace;
 }
+
+
 
